--- a/static/engine/templates/jokes.html
+++ b/static/engine/templates/jokes.html
@@ -8,40 +8,39 @@
 {% block content %}
   <div class="container-fluid">
     {% for joke in jokes %}
-      <div class="row mt-2">
-        <div class="card mb-4" style="width: 55rem; background-color: rgba(173, 173, 173, 0.45);">
+        <div class="card my-2" style="background-color: rgba(173, 173, 173, 0.15);">
           <div class="card-body">
             <h2 class="card-title display-4">{{ joke.title }}</h2>
             <h5 class="text-right">{{ joke.author.name }}</h5>
-            <p class="card-text">{{ joke.text }}...</p>
-            <a href="/review/{{ joke.category_id }}/" role="button" class="btn btn-outline-primary">Review This Joke</a>
+            <p class="card-text">{{ joke.text }}</p>
             <button class="btn btn-outline-primary" type="button" data-toggle="collapse" data-target="#{{ joke.category_id }}" aria-expanded="false" aria-controls="{{ joke.category_id }}">
               Hide/Show Reviews
             </button>
-            <a href="/reviewjoke/{{ joke.category_id }}/" role="button" class="btn btn-outline-primary">Review Joke</a>
+            <a href="/review/{{ joke.category_id }}/" role="button" class="btn btn-outline-primary">Review This Joke</a>
             <div class="collapse" id="{{ joke.category_id }}">
               <div id="accordion">
-                {% for review in joke.review_set %}
-                <div class="card">
-                  <div class="card-header" id="{{ review.category_id }}1">
-                    <h5 class="mb-0">
-                      <button class="btn btn-link" data-toggle="collapse" data-target="#{{ review.category_id }}" aria-expanded="true" aria-controls="{{ review.category_id }}">
-                        {{ review.rating }}/10 - {{ review.author.name }}'s review
-                      </button>
-                    </h5>
-                  </div>
-                  <div id="{{ review.category_id }}" class="collapse collapsed" aria-labelledby="{{ review.category_id }}1" data-parent="#accordion">
-                    <div class="card-body">
-                      {{ review.comments }}
-                    </div>
+              {% for review in joke.review_set.all %}
+              <div class="card my-2">
+                <div class="card-header" id="{{ review.category_id }}1">
+                  <h5>
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#{{ review.category_id }}" aria-expanded="true" aria-controls="{{ review.category_id }}">
+                      {{ review.rating }}/10 - {{ review.author.name }}'s review
+                    </button>
+                  </h5>
+                </div>
+                <div id="{{ review.category_id }}" class="collapse collapsed" aria-labelledby="{{ review.category_id }}1" data-parent="#accordion">
+                  <div class="card-body">
+                    {{ review.comments }}
                   </div>
                 </div>
-                {% endfor %}
               </div>
+              {% empty %}
+              <h3 class="py-2">No Reviews</h3>
+              {% endfor %}
+            </div>
             </div>
           </div>
         </div>
-      </div>
     {% endfor %}
   </div>
 {% endblock %}
