--- a/static/engine/templates/newreview.html
+++ b/static/engine/templates/newreview.html
@@ -8,29 +8,25 @@
 
 {% block content %}
   <div class="container-fluid">
-    <div class="row mt-2">
-      <h3 class="my-4 display-4">New Review</h3>
+    <h3 class="display-4">New Review</h3>
+    <div class="container-fluid">
       <form action="/review/{{ jokeid }}/" method="post">
         {% csrf_token %}
         <div class="form-group">
-          {{ nameform }}
-          <input type="submit" value="Submit" />
+          {{ form | crispy }}
         </div>
-        <div class="form-group">
-          <label for="Rating">Rating (1-10)</label>
-          <select class="form-control" id="author_name" name="author_name" required>
-            {% for i in range %}
-              <option>{{ i }}</option>
-            {% endfor %}
-          </select>
-          <input type="submit" value="Submit" />
-        </div>
-        <div class="form-group">
-          <label for="Text">Review Comments</label>
-          <textarea class="form-control" id="text" name="text" rows="3" required></textarea>
-          <input type="submit" value="Submit" />
-        </div>
+        <input class="my-1 btn btn-outline-primary" type="submit" value="Submit" />
       </form>
     </div>
   </div>
 {% endblock %}
+
+<!-- <div class="form-group">
+  <label for="Rating">Rating (1-10)</label>
+  <select class="form-control" id="author_name" name="author_name" required>
+    {% for i in range %}
+      <option>{{ i }}</option>
+    {% endfor %}
+  </select>
+  <input type="submit" value="Submit" />
+</div> -->
