--- a/static/engine/templates/newjoke.html
+++ b/static/engine/templates/newjoke.html
@@ -8,15 +8,19 @@
 
 {% block content %}
   <div class="container-fluid">
-    <h3 class="display-4">New Joke</h3>
-    <div class="container-fluid">
-      <form action="/create/" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-          {{ form | crispy }}
+    <div class="card mb-4 mx-auto">
+      <div class="card-body">
+        <h3 class="display-4">New Joke</h3>
+        <div class="container-fluid">
+          <form action="/create/" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+              {{ form | crispy }}
+            </div>
+            <input class="my-1 btn btn-outline-primary" type="submit" value="Submit" />
+          </form>
         </div>
-        <input class="my-1 btn btn-outline-primary" type="submit" value="Submit" />
-      </form>
-    </div>
+      </div>
+    </div>  
   </div>
 {% endblock %}
